@@ -1,3 +1,12 @@
+2009-06-20  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* test_check.sh:
+	  Instead of comparing to an exact match for test_expected for our
+	  Python version, allow comparing against the newest expected version
+	  that is equal to or below our Python version.
+	  Avoids needing to add output for test 17 on python 2.5, and fixes
+	  test 17 in my python 2.5 test run.
+
 2008-07-29  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* test/common.py:
